--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,11 @@
 }
 
 .violet-gradient {
-  background: #f4e7d4;
-  background: linear-gradient(-90deg, #f4e7d4 0%, rgba(60, 51, 80, 0) 100%);
+  background: #fadb00;
+  background: linear-gradient(-90deg, #fadb00 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #f4e7d4 0%,
+    #fadb00 0%,
     rgba(60, 51, 80, 0) 100%
   );
 }
